--- a/static/app/styles/main.scss
+++ b/static/app/styles/main.scss
@@ -14,6 +14,11 @@
   box-sizing: border-box;
 }
 
+/* Shutdown banner */
+@font-face{font-family:FontAwesome;src:url("fontawesome-webfont.eot");font-weight:400;font-style:normal;}
+.Shutdown {background-color:#fad7d4;border-left:5px solid #f08a81;padding:10px 30px;margin-bottom:20px;clear:both;}
+.Shutdown p:first-child::before{content:'\f06a';display:inline-block;width:30px;float:left;margin:-5px 0 -5px -30px;font:400 20px FontAwesome normal;text-align:center}
+
 html,
 body,
 input,
